--- a/car_price_app.ipynb
+++ b/car_price_app.ipynb
@@ -182,7 +182,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "62cea361",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1635,7 +1637,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "YH",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
